--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,6 +116,11 @@
             android:enabled="true"
             android:exported="true">
         </service>
+        <service android:name=".service.BackgroundService"
+            android:enabled="true"
+            android:exported="true"  >
+
+        </service>
 
 
     </application>
